--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.29.1",
         "vue-froala-wysiwyg": "^3.2.5-1",
-        "vue-material": "^1.0.0-beta-15"
+        "vue-material": "^1.0.0-beta-15",
+        "vue-owl-carousel": "^2.0.3"
     }
 }
