--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
         "stream": false
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2",
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.29.1",
         "vue-froala-wysiwyg": "^3.2.5-1",
         "vue-material": "^1.0.0-beta-15",
-        "vue-owl-carousel": "^2.0.3"
+        "vue-owl-carousel": "^2.0.3",
+        "vue-recaptcha-v3": "^1.9.0"
     }
 }
