--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "laravel-vue-pagination": "^2.3.1",
         "moment": "^2.29.1",
         "vue-froala-wysiwyg": "^3.2.5-1",
+        "vue-js-modal": "^2.0.0-rc.6",
         "vue-material": "^1.0.0-beta-15",
         "vue-owl-carousel": "^2.0.3",
         "vue-recaptcha-v3": "^1.9.0"
